# Project-1-course-1-semestr

./: README.md
Simple Dino 1.1/: CMakeLists.txt  Project11C++.cpp  README.md
Simple Dino 1.1/inc/: Animation.h  Obstacle.h  StateObjects.h
Simple Dino 1.1/src/: Animation.cpp  Obstacle.cpp  StateObjects.cpp
